compiler/testData/diagnostics/tests/regressions/kt847.jet
fun <T> T.mustBe(t : T) {
    "$this must be$<!SYNTAX!>as<!>$t"
}